[package]
name = "python_comm"
version = "0.2.3"
authors = ["wugifer <wugifer@>"]
edition = "2018"
description = "to make writing python modules with rust easier."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wugifer/python-comm"
documentation = "https://docs.rs/python-comm/"

[dependencies]
anyhow             = "~1.0"
ahash              = "~0.7"
chrono             = "~0.4"
lazy_static        = "~1.4"
pyo3               = "~0.14"
mysql              = "~20.1"
rust_decimal       = "~1.12"
serde              = { version = "~1.0", features = ["derive"] }
serde_derive       = "~1.0"
serde_json         = "~1.0"

python_comm_macros = "~0.2"
# python_comm_macros = { path = "../python-comm-macros" }

[target.'cfg(target_os = "linux")'.dependencies]
pprof              = { version = "~0.5", features = ["flamegraph"] }


[dev-dependencies]
rust_decimal_macros = "~1.12"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
