[package]
name = "python_comm"
version = "0.3.5"
authors = ["wugifer <wugifer@>"]
edition = "2021"
description = "to make writing python modules with rust easier."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wugifer/python-comm"
documentation = "https://docs.rs/python-comm/"

[dependencies]
ahash              = "~0.7"
chrono             = "~0.4"
lazy_static        = "~1.4"
mysql              = { version = "~20.1", optional = true }
rust_decimal       = "~1.12"
serde              = { version = "~1.0", features = ["derive"] }
serde_json         = "~1.0"

python_comm_macros = "~0.3"
# python_comm_macros = { path = "../python-comm-macros" }

[dev-dependencies]
rust_decimal_macros = "~1.12"

[features]
use_sql  = [ "mysql" ]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
